Performance fix for top controls-affected raster

In https://crrev.com/507b99cae16ab2ffb3a23569434346c4f2bb2eab [formerly 77b67445ba6e415e8b41b5b6fd5c016c7195206d] I changed
PictureLayerImpl::UpdateViewportRectForTilePriorityInContentSpace by the
"live" bounds-delta, which is the exact amount that the browser controls
have been hidden by. Prevoiusly, this method would expand by the entire
top controls height.

That CL caused the linked performance regression. I suspect this happens
because we would progressively raster slightly more of the layer, rather
than rastering the entire browser-controls based bar in one shot. This
CL goes back to expanding the visible rect by the entire
browser-controls height rather than using the amount-hidden.

Bug: 890870
Change-Id: Id3a2b019e394005fe4434b7b6bf4a37f81f4550c
Reviewed-on: https://chromium-review.googlesource.com/c/1297281
Reviewed-by: vmpstr <vmpstr@chromium.org>
Commit-Queue: David Bokan <bokan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#603130}
Former-commit-id: b2d410710e7ea7c5a33798ff6b5d5191b1951b5e